-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
c5d4c9345 (dev), 4af8eef9b (6.5)
The current implementation of tracegen tool doesn't handle correcly the size of datatypes when cross compiling. Currently it uses the datatypes provided by the host, which are not necessarely the same as the target. The data type handling and metadata creation needs to be moved to the wrapper and generate the event metadata at compile time.