CTF: Move event metadata generation to the wrapper

This fixes the metadata generation when cross compiling. The metadata
needs to be generated based on the type info of the target. Currently
the metadata is generated in the tool based on the host type info.

Task-number: QTBUG-110270
Change-Id: Ibcdcbd690620afc532d6007cf036229342bdcc31
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit c5d4c9345bc5a8d146592a7b933242fcf22358ef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>